@@ -129,10 +129,13 @@ private:
   bool save_file_at_iter(const Gtk::TreeModel::iterator& iter,
                          Util::SharedPtr<MessageList>* error_list);
 
-  bool find_matches_at_iter(const Gtk::TreeModel::iterator& iter, FindMatchesData* find_data);
+  bool find_matches_at_path_iter(const Gtk::TreeModel::Path& path,
+                                 const Gtk::TreeModel::iterator& iter,
+                                 FindMatchesData* find_data);
 
-  bool replace_matches_at_iter(const Gtk::TreeModel::iterator& iter,
-                               ReplaceMatchesData* replace_data);
+  bool replace_matches_at_path_iter(const Gtk::TreeModel::Path& path,
+                                    const Gtk::TreeModel::iterator& iter,
+                                    ReplaceMatchesData* replace_data);
 
   bool next_match_file(Gtk::TreeModel::iterator& iter, std::stack<Gtk::TreePath>* collapse_stack = 0);
   bool prev_match_file(Gtk::TreeModel::iterator& iter, std::stack<Gtk::TreePath>* collapse_stack = 0);
